@@ -74,3 +74,6 @@
 ## 2017-11-13 V1.12.3 Bastian Bechtold
   - Autoload fixes (thank you, Troy Hinckley!)
   - Fixes for org-journal-file-format if it has a file extension or is behind a symlink.
+
+## 2018-03-27 V1.13.0 Bastian Bechtold
+  - Implements scheduling of future events
